--- a/users/kaitotlex/de/waybar/style.css
+++ b/users/kaitotlex/de/waybar/style.css
@@ -19,7 +19,7 @@ window#waybar {
 
 .modules-right {
     opacity: 1;
-    background-color: @overlay;
+    background-color: @subtle;
     border-radius: 0.5rem;
     padding: 2px 2px 2px 10px
 }
@@ -51,7 +51,7 @@ window#waybar {
 }
 
 #battery {
-    color: @pine;
+    color: @foam;
 }
 
 #memory {
@@ -71,5 +71,5 @@ window#waybar {
 }
 
 #network {
-    color: @love;
+    color: @rose;
 }
